# InstallKits

./: .gitignore  BUILD.md  GUIDE_RU.md  InstallKits_toga.spec  README.md  RPM_PACKAGING.md  installkits.py  installkits.spec  main.py  package_linux.sh  pyproject.toml  run_toga.py  settings.json  settings_manager.py  toga_runtime_hook.py  version.py
.gigacode/plans/: 1783349259192-sunny-falcon.plan.md
InstallKits-redos/: GUIDE_RU.md  README-REDOS.md  build_redos.sh  requirements-redos.txt  settings.json  version.py
InstallKits-redos/data/: __init__.py  db.py  discs.py  kits.py  products.py  stock.py
InstallKits-redos/ui/: __init__.py  excel_report.py  main_window.py  spinbox.py
data/: __init__.py  boxes.py  db.json  db.py  discs.py  operations.py  products.py  stock.py
flet_app/: app.py
flet_app/views/: dispatch_view.py  operations_view.py  products_view.py  report_view.py  settings_view.py  stock_view.py
toga_app/: __init__.py  app.py  dialogs.py  main.py
ui/: main_window.py  report_window.py  stock_view_window.py
ui/dialogs/: __init__.py  add_all.py  add_box.py  add_component.py  add_disc.py  add_product.py  add_stock.py  adjust_stock.py  base_dialog.py  delete_box.py  delete_component.py  delete_disc.py  dispatch.py  edit_disc.py  edit_product.py  write_off.py
ui/tabs/: __init__.py  batch_dispatch_tab.py  operations_tab.py  products_tab.py  settings_tab.py  stock_tab.py  view_stock_tab.py
ui/widgets/: __init__.py  date_picker.py
webapp/: README.md  app.py  excel_helper.py  requirements.txt
webapp/templates/: boxes.html  discs.html  index.html  (+9 more)
(+19 files in other folders)
